--- a/projects/projects.json
+++ b/projects/projects.json
@@ -2,7 +2,7 @@
   {
     "name": "CITRUS",
     "desc": "Aplikasi CITRUS menggunakan kecerdasan buatan untuk mendeteksi buah kualitas dan jumlah buah",
-    "image": "citrus",
+    "image": "images/citrus.png",
     "category": "website",
     "links": {
       "code": "https://github.com/Vioneta-Zarazsofia/Aplikasi-CITRUS_ORBIT_MSIB5.git"
@@ -11,7 +11,7 @@
   {
     "name": "ScarWash",
     "desc": "ScarWash adalah aplikasi yang dapat membantu pengguna untuk mencuci sepatu tanpa harus keluar rumah.",
-    "image": "scarwash",
+    "image": "images/scarwash.png",
     "category": "website",
     "links": {
       "code": "https://github.com/Vioneta-Zarazsofia/FP_YesTech_Vioneta.git"
@@ -20,7 +20,7 @@
   {
     "name": "Pencatatan Infak & Sedekah",
     "desc": "Aplikasi Pencatatan Infak & Sedekah adalah aplikasi yang dapat membantu pengguna untuk mencatat infak dan sedekah yang telah diberikan.",
-    "image": "infak",
+    "image": "images/infak.png",
     "category": "website",
     "links": {
       "code": "https://github.com/Vioneta-Zarazsofia/Catatan-Keuangan-Infak-Sedekah.git"
@@ -29,7 +29,7 @@
   {
     "name": "Webside DIY",
     "desc": "Situs web DIY menjadi tempat di mana pengguna dapat menemukan beragam ide dan tutorial untuk berbagai bidang.",
-    "image": "diy.png",
+    "image": "images/diy.png",
     "category": "website",
     "links": {
       "view": "https://diy-website.000webhostapp.com/index.html",
@@ -39,7 +39,7 @@
   {
     "name": "USA Laundry",
     "desc": "USA Laundry adalah solusi modern untuk tugas sehari-hari yang umum namun memerlukan waktu dan perhatian: mencuci pakaian.",
-    "image": "laundry",
+    "image": "images/laundry.png",
     "category": "website",
     "links": {
       "view": "https://laundryusa.000webhostapp.com/",
@@ -49,7 +49,7 @@
   {
     "name": "Admin Laundry",
     "desc": "Tempat di mana administrator atau pengelola memiliki akses penuh atau terbatas untuk mengontrol aspek-aspek kunci dari suatu sistem atau aplikasi",
-    "image": "AdmLaundry",
+    "image": "images/AdmLaundry.png",
     "category": "website",
     "links": {
       "view": "https://laundry1234567.000webhostapp.com/admin/",
