Remove view link from Zaitun Mart project
Removed the view link for the Zaitun Mart project.

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -5,7 +5,7 @@
     "image": "images/zaitun.png",
     "category": "website",
     "links": {
-      "view": "https://diy-website.000webhostapp.com/index.html",
+      "view": "",
       "code": "https://github.com/Vioneta-Zarazsofia/Zmart.git"
     }
   },
