Add view links for ScarWash and Infak & Sedekah apps

--- a/projects/projects.json
+++ b/projects/projects.json
@@ -35,6 +35,7 @@
     "image": "scarwash",
     "category": "website",
     "links": {
+      "view": "https://www.canva.com/design/DAGJORvoiek/5CmNIY4zVezxqeEL_dZh1Q/edit?utm_content=DAGJORvoiek&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
       "code": "https://github.com/Vioneta-Zarazsofia/FP_YesTech_Vioneta.git"
     }
   },
@@ -44,6 +45,7 @@
     "image": "infak",
     "category": "website",
     "links": {
+       "view": "https://www.canva.com/design/DAGJORvoiek/5CmNIY4zVezxqeEL_dZh1Q/edit?utm_content=DAGJORvoiek&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
       "code": "https://github.com/Vioneta-Zarazsofia/Catatan-Keuangan-Infak-Sedekah.git"
     }
   },
