--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,5 +1,35 @@
 [
   {
+    "name": "MARKAS",
+    "desc": "MARKAS adalah website untuk booking tempat bagi penggerak ekosistem digital Indonesia.",
+    "image": "citrus",
+    "category": "website",
+    "links": {
+      "view": "https://www.figma.com/proto/hKNzjBelmLGJb61nGccaEV/Desain-Ulang-Website-MARKAS-Indonesia?page-id=0%3A1&node-id=1-2&p=f&viewport=143%2C222%2C0.04&t=1TwSeFABFh9XVONX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=36%3A672",
+      "code": "https://www.figma.com/proto/hKNzjBelmLGJb61nGccaEV/Desain-Ulang-Website-MARKAS-Indonesia?page-id=0%3A1&node-id=1-2&p=f&viewport=143%2C222%2C0.04&t=1TwSeFABFh9XVONX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=36%3A672"
+    }
+  },
+  {
+    "name": "AFES LAUNDRY",
+    "desc": "AFES Laundry adalah layanan laundry yang menyediakan jasa cuci, setrika, dan perawatan pakaian secara cepat dan profesional.",
+    "image": "citrus",
+    "category": "website",
+    "links": {
+      "view": "https://www.figma.com/proto/H5sRhKkEZtlf6GPkCVNbqP/Ebisnis-Laundry?page-id=0%3A1&node-id=5-124&viewport=380%2C154%2C0.13&t=guNJgfA4XuOu9t1Q-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2",
+      "code": "https://www.figma.com/proto/H5sRhKkEZtlf6GPkCVNbqP/Ebisnis-Laundry?page-id=0%3A1&node-id=5-124&viewport=380%2C154%2C0.13&t=guNJgfA4XuOu9t1Q-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2"
+    }
+  },
+   {
+    "name": "MICU CAFFE",
+    "desc": "MICU Cafe adalah web yang menyediakan informasi menu, promo, dan layanan pemesanan untuk kafe MICU agar pelanggan dapat memesan dengan mudah dan cepat.",
+    "image": "citrus",
+    "category": "website",
+    "links": {
+      "view": "https://www.figma.com/proto/H21yEZeLTHmZ375OPTDgyS/Metodologi-Penelitian--MICU-CAFE-?page-id=1%3A3&node-id=3-2522&starting-point-node-id=3%3A2522&t=GoPqKuFqudkhneEo-1",
+      "code": "https://www.figma.com/proto/H21yEZeLTHmZ375OPTDgyS/Metodologi-Penelitian--MICU-CAFE-?page-id=1%3A3&node-id=3-2522&starting-point-node-id=3%3A2522&t=GoPqKuFqudkhneEo-1"
+    }
+  },
+  {
     "name": "CITRUS",
     "desc": "Aplikasi CITRUS menggunakan kecerdasan buatan untuk mendeteksi buah kualitas dan jumlah buah",
     "image": "citrus",
