--- a/projects/projects.json
+++ b/projects/projects.json
@@ -5,8 +5,8 @@
     "image": "citrus",
     "category": "website",
     "links": {
-      "view": "https://www.figma.com/proto/hKNzjBelmLGJb61nGccaEV/Desain-Ulang-Website-MARKAS-Indonesia?page-id=0%3A1&node-id=1-2&p=f&viewport=143%2C222%2C0.04&t=1TwSeFABFh9XVONX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=36%3A672",
-      "code": "https://www.figma.com/proto/hKNzjBelmLGJb61nGccaEV/Desain-Ulang-Website-MARKAS-Indonesia?page-id=0%3A1&node-id=1-2&p=f&viewport=143%2C222%2C0.04&t=1TwSeFABFh9XVONX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=36%3A672"
+      "Prototype": "https://www.figma.com/proto/hKNzjBelmLGJb61nGccaEV/Desain-Ulang-Website-MARKAS-Indonesia?page-id=0%3A1&node-id=1-2&p=f&viewport=143%2C222%2C0.04&t=1TwSeFABFh9XVONX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=36%3A672",
+     
     }
   },
   {
@@ -15,8 +15,7 @@
     "image": "citrus",
     "category": "website",
     "links": {
-      "view": "https://www.figma.com/proto/H5sRhKkEZtlf6GPkCVNbqP/Ebisnis-Laundry?page-id=0%3A1&node-id=5-124&viewport=380%2C154%2C0.13&t=guNJgfA4XuOu9t1Q-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2",
-      "code": "https://www.figma.com/proto/H5sRhKkEZtlf6GPkCVNbqP/Ebisnis-Laundry?page-id=0%3A1&node-id=5-124&viewport=380%2C154%2C0.13&t=guNJgfA4XuOu9t1Q-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2"
+      "Prototype": "https://www.figma.com/proto/H5sRhKkEZtlf6GPkCVNbqP/Ebisnis-Laundry?page-id=0%3A1&node-id=5-124&viewport=380%2C154%2C0.13&t=guNJgfA4XuOu9t1Q-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2",
     }
   },
    {
@@ -25,8 +24,7 @@
     "image": "citrus",
     "category": "website",
     "links": {
-      "view": "https://www.figma.com/proto/H21yEZeLTHmZ375OPTDgyS/Metodologi-Penelitian--MICU-CAFE-?page-id=1%3A3&node-id=3-2522&starting-point-node-id=3%3A2522&t=GoPqKuFqudkhneEo-1",
-      "code": "https://www.figma.com/proto/H21yEZeLTHmZ375OPTDgyS/Metodologi-Penelitian--MICU-CAFE-?page-id=1%3A3&node-id=3-2522&starting-point-node-id=3%3A2522&t=GoPqKuFqudkhneEo-1"
+      "Prototype": "https://www.figma.com/proto/H21yEZeLTHmZ375OPTDgyS/Metodologi-Penelitian--MICU-CAFE-?page-id=1%3A3&node-id=3-2522&starting-point-node-id=3%3A2522&t=GoPqKuFqudkhneEo-1",
     }
   },
   {
