--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,11 +1,59 @@
 [
+    {
+    "name": "MARKAS",
+    "desc": "MARKAS adalah website untuk booking tempat bagi penggerak ekosistem digital Indonesia.",
+    "image": "citrus",
+    "category": "website",
+    "links": {
+      "View": "https://www.figma.com/proto/hKNzjBelmLGJb61nGccaEV/Desain-Ulang-Website-MARKAS-Indonesia?page-id=0%3A1&node-id=1-2&p=f&viewport=143%2C222%2C0.04&t=1TwSeFABFh9XVONX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=36%3A672",
+    }
+  },
+  {
+    "name": "AFES LAUNDRY",
+    "desc": "AFES Laundry adalah layanan laundry yang menyediakan jasa cuci, setrika, dan perawatan pakaian secara cepat dan profesional.",
+    "image": "citrus",
+    "category": "website",
+    "links": {
+      "View": "https://www.figma.com/proto/H5sRhKkEZtlf6GPkCVNbqP/Ebisnis-Laundry?page-id=0%3A1&node-id=5-124&viewport=380%2C154%2C0.13&t=guNJgfA4XuOu9t1Q-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2",
+    }
+  },
+   {
+    "name": "MICU CAFFE",
+    "desc": "MICU Cafe adalah web yang menyediakan informasi menu, promo, dan layanan pemesanan untuk kafe MICU agar pelanggan dapat memesan dengan mudah dan cepat.",
+    "image": "citrus",
+    "category": "website",
+    "links": {
+      "View": "https://www.figma.com/proto/H21yEZeLTHmZ375OPTDgyS/Metodologi-Penelitian--MICU-CAFE-?page-id=1%3A3&node-id=3-2522&starting-point-node-id=3%3A2522&t=GoPqKuFqudkhneEo-1",
+    }
+  },
   {
     "name": "CITRUS",
     "desc": "Aplikasi CITRUS menggunakan kecerdasan buatan untuk mendeteksi buah kualitas dan jumlah buah",
     "image": "citrus",
     "category": "website",
     "links": {
+      "view": "https://www.canva.com/design/DAGJORvoiek/5CmNIY4zVezxqeEL_dZh1Q/edit?utm_content=DAGJORvoiek&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
       "code": "https://github.com/Vioneta-Zarazsofia/Aplikasi-CITRUS_ORBIT_MSIB5.git"
+    }
+  },
+  {
+    "name": "Zaitun Mart",
+    "desc": "Zaitun Mart adalah website e-commerce untuk jual beli makanan dan minuman kemasan dengan dua jenis pengguna: Admin dan Customer.",
+    "image": "diy.png",
+    "category": "website",
+    "links": {
+      "view": "https://www.canva.com/design/DAF7cfIN-kM/BK3UVt2zX2OXF7FMMfeAtg/edit?utm_content=DAF7cfIN-kM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
+      "code": "https://github.com/Vioneta-Zarazsofia/Zmart.git"
+    }
+  },
+  {
+    "name": "Webside DIY",
+    "desc": "Situs web DIY menjadi tempat di mana pengguna dapat menemukan beragam ide dan tutorial untuk berbagai bidang.",
+    "image": "diy.png",
+    "category": "website",
+    "links": {
+      "view": "https://www.canva.com/design/DAF7cfIN-kM/BK3UVt2zX2OXF7FMMfeAtg/edit?utm_content=DAF7cfIN-kM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
+      "code": "https://github.com/Vioneta-Zarazsofia/DIY-HAVIO.github.io.git"
     }
   },
   {
@@ -14,6 +62,7 @@
     "image": "scarwash",
     "category": "website",
     "links": {
+      "view": "https://www.canva.com/design/DAGJORvoiek/5CmNIY4zVezxqeEL_dZh1Q/edit?utm_content=DAGJORvoiek&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
       "code": "https://github.com/Vioneta-Zarazsofia/FP_YesTech_Vioneta.git"
     }
   },
@@ -23,6 +72,7 @@
     "image": "infak",
     "category": "website",
     "links": {
+       "view": "https://www.canva.com/design/DAGJORvoiek/5CmNIY4zVezxqeEL_dZh1Q/edit?utm_content=DAGJORvoiek&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
       "code": "https://github.com/Vioneta-Zarazsofia/Catatan-Keuangan-Infak-Sedekah.git"
     }
   },
@@ -43,16 +93,6 @@
     "category": "website",
     "links": {
       "view": "https://laundryusa.000webhostapp.com/",
-      "code": "https://github.com/Vioneta-Zarazsofia/FP-PEMWEB-Kelompok-13-.git"
-    }
-  },
-  {
-    "name": "Admin Laundry",
-    "desc": "Tempat di mana administrator atau pengelola memiliki akses penuh atau terbatas untuk mengontrol aspek-aspek kunci dari suatu sistem atau aplikasi",
-    "image": "AdmLaundry",
-    "category": "website",
-    "links": {
-      "view": "https://laundry1234567.000webhostapp.com/admin/",
       "code": "https://github.com/Vioneta-Zarazsofia/FP-PEMWEB-Kelompok-13-.git"
     }
   }
