--- a/projects/projects.json
+++ b/projects/projects.json
@@ -1,11 +1,11 @@
 [
-    {
+  {
     "name": "MARKAS",
     "desc": "MARKAS adalah website untuk booking tempat bagi penggerak ekosistem digital Indonesia.",
     "image": "citrus",
     "category": "website",
     "links": {
-      "View": "https://www.figma.com/proto/hKNzjBelmLGJb61nGccaEV/Desain-Ulang-Website-MARKAS-Indonesia?page-id=0%3A1&node-id=1-2&p=f&viewport=143%2C222%2C0.04&t=1TwSeFABFh9XVONX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=36%3A672",
+      "view": "https://www.figma.com/proto/hKNzjBelmLGJb61nGccaEV/Desain-Ulang-Website-MARKAS-Indonesia?page-id=0%3A1&node-id=1-2&p=f&viewport=143%2C222%2C0.04&t=1TwSeFABFh9XVONX-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=36%3A672"
     }
   },
   {
@@ -14,21 +14,21 @@
     "image": "citrus",
     "category": "website",
     "links": {
-      "View": "https://www.figma.com/proto/H5sRhKkEZtlf6GPkCVNbqP/Ebisnis-Laundry?page-id=0%3A1&node-id=5-124&viewport=380%2C154%2C0.13&t=guNJgfA4XuOu9t1Q-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2",
+      "view": "https://www.figma.com/proto/H5sRhKkEZtlf6GPkCVNbqP/Ebisnis-Laundry?page-id=0%3A1&node-id=5-124&viewport=380%2C154%2C0.13&t=guNJgfA4XuOu9t1Q-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=1%3A2"
     }
   },
-   {
-    "name": "MICU CAFFE",
-    "desc": "MICU Cafe adalah web yang menyediakan informasi menu, promo, dan layanan pemesanan untuk kafe MICU agar pelanggan dapat memesan dengan mudah dan cepat.",
+  {
+    "name": "MICU CAFE",
+    "desc": "MICU Cafe adalah web yang menyediakan informasi menu, promo, dan layanan pemesanan agar pelanggan dapat memesan dengan mudah dan cepat.",
     "image": "citrus",
     "category": "website",
     "links": {
-      "View": "https://www.figma.com/proto/H21yEZeLTHmZ375OPTDgyS/Metodologi-Penelitian--MICU-CAFE-?page-id=1%3A3&node-id=3-2522&starting-point-node-id=3%3A2522&t=GoPqKuFqudkhneEo-1",
+      "view": "https://www.figma.com/proto/H21yEZeLTHmZ375OPTDgyS/Metodologi-Penelitian--MICU-CAFE-?page-id=1%3A3&node-id=3-2522&starting-point-node-id=3%3A2522&t=GoPqKuFqudkhneEo-1"
     }
   },
   {
     "name": "CITRUS",
-    "desc": "Aplikasi CITRUS menggunakan kecerdasan buatan untuk mendeteksi buah kualitas dan jumlah buah",
+    "desc": "Aplikasi CITRUS menggunakan kecerdasan buatan untuk mendeteksi kualitas dan jumlah buah.",
     "image": "citrus",
     "category": "website",
     "links": {
@@ -47,37 +47,7 @@
     }
   },
   {
-    "name": "Webside DIY",
-    "desc": "Situs web DIY menjadi tempat di mana pengguna dapat menemukan beragam ide dan tutorial untuk berbagai bidang.",
-    "image": "diy.png",
-    "category": "website",
-    "links": {
-      "view": "https://www.canva.com/design/DAF7cfIN-kM/BK3UVt2zX2OXF7FMMfeAtg/edit?utm_content=DAF7cfIN-kM&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
-      "code": "https://github.com/Vioneta-Zarazsofia/DIY-HAVIO.github.io.git"
-    }
-  },
-  {
-    "name": "ScarWash",
-    "desc": "ScarWash adalah aplikasi yang dapat membantu pengguna untuk mencuci sepatu tanpa harus keluar rumah.",
-    "image": "scarwash",
-    "category": "website",
-    "links": {
-      "view": "https://www.canva.com/design/DAGJORvoiek/5CmNIY4zVezxqeEL_dZh1Q/edit?utm_content=DAGJORvoiek&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
-      "code": "https://github.com/Vioneta-Zarazsofia/FP_YesTech_Vioneta.git"
-    }
-  },
-  {
-    "name": "Pencatatan Infak & Sedekah",
-    "desc": "Aplikasi Pencatatan Infak & Sedekah adalah aplikasi yang dapat membantu pengguna untuk mencatat infak dan sedekah yang telah diberikan.",
-    "image": "infak",
-    "category": "website",
-    "links": {
-       "view": "https://www.canva.com/design/DAGJORvoiek/5CmNIY4zVezxqeEL_dZh1Q/edit?utm_content=DAGJORvoiek&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
-      "code": "https://github.com/Vioneta-Zarazsofia/Catatan-Keuangan-Infak-Sedekah.git"
-    }
-  },
-  {
-    "name": "Webside DIY",
+    "name": "DIY Website",
     "desc": "Situs web DIY menjadi tempat di mana pengguna dapat menemukan beragam ide dan tutorial untuk berbagai bidang.",
     "image": "diy.png",
     "category": "website",
@@ -87,8 +57,28 @@
     }
   },
   {
+    "name": "ScarWash",
+    "desc": "ScarWash adalah aplikasi yang membantu pengguna mencuci sepatu tanpa harus keluar rumah.",
+    "image": "scarwash",
+    "category": "website",
+    "links": {
+      "view": "https://www.canva.com/design/DAGJORvoiek/5CmNIY4zVezxqeEL_dZh1Q/edit?utm_content=DAGJORvoiek&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
+      "code": "https://github.com/Vioneta-Zarazsofia/FP_YesTech_Vioneta.git"
+    }
+  },
+  {
+    "name": "Pencatatan Infak & Sedekah",
+    "desc": "Aplikasi Pencatatan Infak & Sedekah membantu pengguna mencatat infak dan sedekah yang telah diberikan.",
+    "image": "infak",
+    "category": "website",
+    "links": {
+      "view": "https://www.canva.com/design/DAGJORvoiek/5CmNIY4zVezxqeEL_dZh1Q/edit?utm_content=DAGJORvoiek&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton",
+      "code": "https://github.com/Vioneta-Zarazsofia/Catatan-Keuangan-Infak-Sedekah.git"
+    }
+  },
+  {
     "name": "USA Laundry",
-    "desc": "USA Laundry adalah solusi modern untuk tugas sehari-hari yang umum namun memerlukan waktu dan perhatian: mencuci pakaian.",
+    "desc": "USA Laundry adalah solusi modern untuk kebutuhan cuci pakaian secara praktis dan efisien.",
     "image": "laundry",
     "category": "website",
     "links": {
